--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<link type="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style.css"/>
 <html lang="en">
     <head>
-        <title>HEllo world</title>
+        <title>Hello world</title>
     </head>
     <body>
         <h1>
