--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
         <h1>
             Hello World!
         </h1>
+        <div style="text-align: center;">
+        <a href="work.html">
+            <button>Libraries</button>
+           </a>
+        </div>
     </body>
 </html>
