--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="css/style.css">
 <html lang="en">
     <head>
         <title>Hello world</title>
