--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <link rel="stylesheet" href="css/style.css">
 <html lang="en">
     <head>
-        <title>Hello world</title>
+        <title>NULL</title>
     </head>
     <body>
         <h1>
-            Hello World!
+            Welcome to my website
         </h1>
         <div style="text-align: center;">
         <a href="work.html">
