--- a/work.html
+++ b/work.html
@@ -8,10 +8,7 @@
             I HAVE NO WORK EXPERIENCE
         </h1>
         <div style="text-align: center;">
-            <video width="640" height="360" controls>
-                <source src="1video_720p.mp4" type="video/mp4">
-                Your website cannot see this
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1-Em9Ti0bgo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div><br>
         <div style="text-align: center;">
             <a href="index.html">
