--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="assets/css/style.css">
 <html lang="en">
+    <script src="assets/javascript/index.js"></script>
     <head>
         <title>NULL</title>
     </head>
@@ -12,6 +13,11 @@
         <a href="work.html">
             <button>Libraries</button>
            </a>
+        </div><br>
+        <div id="buttons">
+            <button data-color="blue">Blue</button>
+            <button data-color="green">Green</button>
+            <button data-color="red">Red</button>
         </div>
     </body>
 </html>
