made the navbar fuctional will expand upon it later

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <title>NULL</title>
     </head>
     <body>
-        <nav class="nav.bar">
+        <nav class="nav_bar">
             
-            <ul>
-                <li>about me</li>
+            <ul >
+                <li style="width: 100px;">about me</li><br><br><br>
                 <li>blogs</li>
             </ul>
         </nav>
@@ -115,6 +115,6 @@
               street art normcore, edison bulb farm-to-table pour-over taxidermy
               brooklyn.
             </p>
-          </main>   
+        </main>   
     </body>
 </html>
