--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
 <html lang="en">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/index.css">
     <head>
         <title>NULL</title>
     </head>
@@ -11,7 +11,7 @@
         <nav class="nav_bar">
             
             <ul >
-                <li style="width: 100px;">about me</li><br><br><br>
+                <li style="width: 100px;"><a href="about_me.html">about me</a></li><br><br>
                 <li>blogs</li>
             </ul>
         </nav>
